# the-rust-programming-language

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yaml
.github/workflows/: chapters.yaml
bio/: Cargo.toml
bio/data/: barcodes.csv  reference.fasta  sequences.fasta
bio/src/: main.rs
chapter-02/guessing_game/src/: main.rs
chapter_02/: Cargo.toml
chapter_02/src/: main.rs
chapter_03/src/: control_flow.rs  data_types.rs  functions.rs  main.rs
clicker_bot/: Cargo.toml
clicker_bot/src/: main.rs
clicker_bot_new/: Cargo.toml  README.md
clicker_bot_new/src/: lib.rs  main.rs  scratch.rs
clicker_bot_new/src/cli/: mod.rs  verbosity.rs
clicker_bot_new/src/component/: mod.rs
clicker_bot_new/src/component/bar/: mod.rs
clicker_bot_new/src/component/bot/: mod.rs
clicker_bot_new/src/component/pixel/: mod.rs
rebar/: Cargo.toml
rebar/src/: lib.rs  main.rs
rebar/src/barcode/: mod.rs
rebar/src/dataset/: dataset.rs  mod.rs  phylogeny.rs  sequences.rs
rebar/src/genome/: barcode.rs  genome.rs  mod.rs
rebar/src/mutation/: mod.rs  substitution.rs
rebar/src/traits/: mod.rs
rebar/src/tree/: mod.rs
