[package]
name = "clicker_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
device_query = "1.1.3"
screenshots = "0.5.4"
image = "0.24.6"
# enigo = "0.1.2"
# rand = "0.8.5"
# image = "0.24.6"
