[package]
name = "clicker_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
device_query = "1.1.3"
env_logger = "0.10.0"
screenshots = "0.5.4"
image = "0.24.6"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tempfile = "3.5.0"
# enigo = "0.1.2"
# rand = "0.8.5"
# image = "0.24.6"
