[package]
name = "rebar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
itertools = "0.10.5"
eyre = "0.6.8"
log = "0.4.17"
env_logger = "0.10.0"
id_tree = "1.8.0"
csv = "1.2.1"
serde = "1.0.163"
serde_json = "1.0.96"
petgraph = "0.6.3"